--- a/pom.xml
+++ b/pom.xml
@@ -8,32 +8,31 @@
     <artifactId>rest-tests-13.05.2019</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!--прописывает версию используемых версий Serenity ${serenity.version} и других плагинов-->
-   <properties>
-       <serenity.version>2.0.50</serenity.version>
-       <junit.version>4.12</junit.version>
-       <slf4j.version>1.7.26</slf4j.version>
-       <surefire.version>2.20</surefire.version>
+    <properties>
+        <serenity.version>2.0.50</serenity.version>
+        <jackson.databind.version>2.9.9</jackson.databind.version>
+        <slf4j.version>1.7.26</slf4j.version>
+        <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
+        <surefire.version>2.20</surefire.version>
+        <source.encoding>UTF-8</source.encoding>
+        <java.version>9</java.version>
+    </properties>
 
-   </properties>
+    <dependencies>
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-rest-assured</artifactId>
+            <version>${serenity.version}</version>
+        </dependency>
 
-   <dependencies>
-       <dependency>
-           <groupId>net.serenity-bdd</groupId>
-           <artifactId>serenity-rest-assured</artifactId>
-           <version>${serenity.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>net.serenity-bdd</groupId>
-           <artifactId>serenity-core</artifactId>
-           <version>${serenity.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>net.serenity-bdd</groupId>
-           <artifactId>serenity-junit</artifactId>
-           <version>${serenity.version}</version>
-       </dependency>
-       <!--to enabled default Serenity loggin-->
+        <!--for JavaObj to JSON serialisation-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
+        </dependency>
+
+        <!--to enable default Serenity logging-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -41,42 +40,24 @@
             <scope>test</scope>
         </dependency>
 
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-
-
-        <!--for JavaObj-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-databind</artifactId>-->
-            <!--<version>2.9.6</version>-->
-
-        <!--</dependency>-->
-
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-junit</artifactId>
+            <version>${serenity.version}</version>
+        </dependency>
 
     </dependencies>
-
-
     <build>
         <plugins>
             <plugin>
-                <groupId>net.serenity-bdd.maven.plugins</groupId>
-                <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.version}</version>
-                <executions>
-                    <execution>
-                        <id>serenity-reports</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>aggregate</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${source.encoding}</encoding>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -88,13 +69,22 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
+                <groupId>net.serenity-bdd.maven.plugins</groupId>
+                <artifactId>serenity-maven-plugin</artifactId>
+                <version>${serenity.version}</version>
+
+                <executions>
+                    <execution>
+                        <id>serenity-reports</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>aggregate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
- </project>
+
+
+</project>
